fixes  alignment in desktop and tablet

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -14,41 +14,43 @@
     margin-top: 3%;
   }
   .navigation > a {
-    font-size: 0.75em;
+    font-size: 0.8em;
   }
   .donation {
     grid-area: 1/2/1/2;
   }
   .donation-btn {
-    padding: 6% 5% 6% 5%;
+    padding: 8%;
     justify-self: center;
+    font-size: 0.9em;
   }
   .main-page {
     background-size: 200% auto;
-    background-position-x: 25%;
-    background-position-y: 85%;
+    background-position-x: 27%;
+    background-position-y: 61%;
     grid-template-rows: 1fr 1fr;
-    height: 42em;
+    height: 35em;
   }
-  .main-page-content > div {
+  /* .main-page-content > div {
     margin: 8.5%;
-  }
+  } */
   .main-page-content2 {
     padding: 0%;
-    margin: 8.5%;
+    /* margin: 8.5%; */
+    height: 18em;
   }
   .main-page-content2-head {
     font-size: 2.1em;
     text-align: left;
     font-weight: bold;
     font-family: "Helvetica";
-    margin: 8.5% 8.5% 0% 8.5%;
+    padding: 8.5% 8.5% 0% 8.5%;
   }
   .main-page-content2-low {
     font-size: 1em;
     font-weight: 200;
     text-align: left;
-    margin: 5% 8.5% 5% 8.5%;
+    /* margin: 5% 8.5% 5% 8.5%; */
   }
   .main-page-content2-top {
     position: absolute;
@@ -57,7 +59,7 @@
     padding: 2%;
   }
   .main-page-lower {
-    padding: 10% 5% 10% 10%;
+    padding: 8.5%;
   }
   .main-page-lower-head {
     padding: 0% 0% 2% 0%;
@@ -66,15 +68,9 @@
     padding: 0% 25% 5% 0%;
   }
   .main-page-lower-top {
-    background-color: #354463;
-    width: 7em;
-    text-align: center;
     padding: 2%;
-    position: absolute;
     top: -5%;
     left: 40%;
-    color: white;
-    font-size: 0.8em;
   }
 
   .what-we-do {
@@ -89,11 +85,8 @@
   }
   .what-we-do-heading > div {
     font-size: 1em;
-    background-color: white;
-    color: #354463;
-    padding: 4%;
+    padding: 2%;
     justify-self: self-start;
-    width: 25%;
     text-align: center;
     align-self: center;
   }
@@ -151,25 +144,59 @@
     margin: 0%;
     width: 40%;
   }
-  .climate-change-head-cots{
+  .climate-change-head-cots {
     margin-bottom: 5%;
   }
   .climate-change-lower {
     width: 50%;
   }
-  
+  .climate-change-lower-content-heading {
+    font-size: 2em;
+  }
+
   .climate-change-lower {
     margin: 0%;
   }
-  
+  .stories {
+    grid-template-rows: 1fr 1fr 1fr;
+    position: relative;
+    grid-gap: 0%;
+  }
+  .stories-head {
+    top: -8%;
+    left: 15%;
+    z-index: 1;
+  }
+  .stories-img {
+    width: 90%;
+    position: relative;
+    grid-area: 1/1/1/1;
+  }
+  .stories-content {
+    position: absolute;
+    bottom: 2%;
+    left: 5%;
+    grid-area: 2/1/2/1;
+  }
+  .stories-btn-div {
+    margin: 2%;
+    grid-area: 3/1/3/1;
+    justify-self: start;
+  }
+  .stories-btn {
+    padding: 8% 17% 8% 17%;
+    width: 8em;
+  }
   .things-to-do {
     display: block;
     position: relative;
   }
   .slogan {
-    margin: 8%;
+    /* margin: 8%; */
     text-align: left;
-    padding: 5%;
+    /* padding: 5%; */
+    font-size: 1.9em;
+    padding-right: 15%;
   }
   .event,
   .news {
@@ -217,31 +244,7 @@
     width: 50%;
     text-align: center;
   }
-  .stories {
-    grid-template-rows: 0.3fr 0.1fr 0.1fr;
-    position: relative;
-  }
-  .stories-head {
-    top: -8%;
-    left: 15%;
-    z-index: 1;
-  }
-  .stories-img {
-    width: 90%;
-    position: relative;
-  }
-  .stories-content {
-    width: 90%;
-    position: absolute;
-    bottom: 0%;
-    left: 5%;
-  }
-  .stories-btn {
-    position: absolute;
-    bottom: -10%;
-    left: 0%;
-    padding: 2% 5% 2% 5%;
-  }
+
   .subscribe > p {
     grid-area: 1/1/2/3;
     font-size: 1.5em;
@@ -267,7 +270,7 @@
     align-self: center;
   }
   .donation-btn {
-    padding: 5% 10% 5% 10%;
+    padding: 5%;
   }
   .main-page {
     grid-template-columns: 1fr 1fr;
@@ -275,16 +278,17 @@
     background-position-x: 0%;
     background-position-y: 45%;
     grid-template-rows: 1fr;
-    height: auto;
+    height: 20em;
   }
   .main-page-content {
     grid-area: 1/2/1/2;
-    margin: 15% 0% 0% 17%;
+    margin-left: 17%;
   }
   .main-page-content2 {
     grid-area: 1/1/1/1;
-    margin: 17% 0% 17% 17%;
-    height: 17em;
+    /* margin: 17% 0% 17% 17%; */
+    height: 18em;
+    margin-right: 17%;
   }
   .main-page-content > div {
     font-size: 3em;
@@ -292,12 +296,13 @@
   }
   .main-page-content2-top {
     top: -5%;
+    padding: 3%;
   }
   .main-page-content2-head {
-    font-size: 2em;
+    font-size: 1.8em;
   }
   .main-page-content2-low {
-    font-size: 1em;
+    font-size: 0.9em;
   }
   .main-page-lower {
     padding: 10% 8.5% 10% 8.5%;
@@ -308,6 +313,7 @@
   }
   .main-page-lower-top {
     font-size: 1em;
+    padding: 1.3%;
   }
   .main-page-lower-head {
     padding: 2% 2% 5% 2%;
@@ -323,7 +329,7 @@
     align-items: center;
     height: auto;
   }
-  
+
   .what-we-do-heading {
     display: block;
     padding-bottom: 4em;
@@ -392,13 +398,17 @@
     background-position-y: 26%;
     height: 50em;
   }
-  .climate-change-head-cots{
+  .climate-change-head-cots {
     font-size: 2.7em;
   }
+  .climate-change-lower-content {
+    height: 10em;
+  }
   .stories {
-    grid-template-rows: 0.5fr;
-    /* grid-template-columns: 1fr 6fr 10fr; */
+    /* grid-template-rows: 1fr; */
+    grid-template-columns: 1fr 1fr;
     grid-gap: 0%;
+    /* height: 40em;; */
   }
   .stories-head {
     top: -15%;
@@ -407,23 +417,26 @@
     padding: 1% 5% 1% 5%;
   }
   .stories-img {
-    width: 100%;
+    width: 70%;
+    /* grid-area: 1/1/1/1; */
   }
   .stories-head-top {
-    grid-area: 1/3/1/3;
+    grid-area: 1/2/1/2;
   }
   .stories-content {
-    width: 50%;
+    /* width: 50%; */
     position: absolute;
     bottom: 20%;
     left: -10%;
     font-size: 1.2em;
+    grid-area: 2/1/2/1;
   }
   .stories-btn {
     position: absolute;
     bottom: 5%;
-
+    grid-area: 3/1/3/1;
     padding: 1% 1% 1% 1%;
+    
   }
 
   .subscribe {
